--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.14",
-    "expo-status-bar": "~1.12.1",
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/auth": "^18.8.0",
+    "@react-native-firebase/firestore": "^18.8.0",
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.21",
+    "crypto-js": "^4.2.0",
+    "expo": "~50.0.7",
+    "expo-dev-client": "~3.3.8",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.73.4",
+    "react-native-crypto": "^2.2.0",
+    "react-native-date-picker": "^4.3.6",
+    "react-native-emoji-selector": "^0.2.0",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
